# Open-Audio-Routing-Software

./: CMakeLists.txt  README.md  build.sh  validate-build.sh
qml/: main.qml
qml/components/: DeviceCard.qml  VolumeSlider.qml
qml/views/: ProfilesView.qml
resources/: icons.qrc  open-audio-router.desktop  styles.qrc
src/: main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  PulseAudioBackend.cpp  PulseAudioBackend.h
src/controllers/: DeviceController.cpp  DeviceController.h  MainController.cpp  MainController.h  ProfileController.cpp  ProfileController.h  RoutingController.cpp  RoutingController.h
src/models/: ApplicationListModel.cpp  ApplicationListModel.h  DeviceListModel.cpp  DeviceListModel.h
src/utils/: AudioApplication.cpp  AudioApplication.h  AudioDevice.cpp  AudioDevice.h  SystemTray.cpp  SystemTray.h
